# MiniProject-w4-Rust-Web-Microservice

moon-phase/: Cargo.toml  Dockerfile  Makefile
moon-phase/src/: lib.rs  main.rs
pytorch-rust-docker/src/: main.rs
webdocker/src/: main.rs
