[package]
name = "moon-phase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
reqwest = { version = "0.11.4", features = ["json"]}
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
chrono = "0.4.19"